fix:note name overflow fix

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -7,3 +7,11 @@
 .icon-cursor {
   cursor: pointer;
 }
+/* .note-name-heading {
+  outline: none !important;
+  border: none !important;
+} */
+.note-name {
+  overflow: hidden;
+  word-wrap: break-word;
+}
